include(find_unittest)

file(GLOB GPUCAST_MATH_UNITTEST_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)

LINK_DIRECTORIES(${LIB_PATHS} ${UNITTEST_LIBRARY_DIRS})

INCLUDE_DIRECTORIES( ${INCLUDE_PATHS} ${UNITTEST_INCLUDE_DIRS} ../include)

ADD_EXECUTABLE( gpucast_math_unittests ${GPUCAST_MATH_UNITTEST_SRC})

TARGET_LINK_LIBRARIES( gpucast_math_unittests debug ${UNITTEST_LIBRARIES} optimized ${UNITTEST_LIBRARIES} )